Tests/a1/reject/12.ul
int main (int x) {
	if (if (x==3) {return;} ) {
		return;
	}
}